--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "mux.js": "^6.3.0",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "shaka-player": "^4.16.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
