Replace bitrate ladder with real-time timeline graph using Recharts

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.5.0",
     "shaka-player": "^4.16.10"
   },
   "devDependencies": {
